--- a/gabriel28.html
+++ b/gabriel28.html
@@ -14,15 +14,16 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #e8f5e9; /* Verde claro */
-            color: #2e7d32; /* Verde oscuro */
+            background: linear-gradient(135deg, #f0f4f8, #d9e8ff); /* Fondo con degradado suave */
+            color: #333; /* Texto general */
             line-height: 1.6;
+            overflow-x: hidden;
         }
 
         /* Header */
         header {
-            background-color: #2e7d32; /* Verde intenso */
-            color: #fff;
+            background: linear-gradient(90deg, #00695c, #004d40); /* Degradado moderno */
+            color: white;
             text-align: center;
             padding: 20px 0;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -30,6 +31,7 @@
 
         header h1 {
             font-size: 2.5rem;
+            font-weight: bold;
         }
 
         nav {
@@ -37,15 +39,15 @@
         }
 
         nav a {
-            color: #c8e6c9; /* Verde pastel */
+            color: #a5d6a7; /* Verde pastel */
             text-decoration: none;
             margin: 0 15px;
             font-size: 1.1rem;
-            transition: color 0.3s;
+            transition: color 0.3s ease;
         }
 
         nav a:hover {
-            color: #ffffff;
+            color: #ffffff; /* Blanco al pasar el mouse */
         }
 
         /* Main Section */
@@ -57,18 +59,19 @@
         }
 
         section {
-            background-color: #fff;
+            background-color: #ffffff;
             width: 90%;
             max-width: 800px;
             margin: 20px 0;
             padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
+            animation: fadeIn 0.5s ease;
         }
 
         section h2 {
-            color: #1b5e20; /* Verde oscuro */
-            border-bottom: 2px solid #c8e6c9;
+            color: #00695c; /* Verde oscuro */
+            border-bottom: 3px solid #80cbc4; /* Detalle de línea */
             padding-bottom: 10px;
             margin-bottom: 20px;
             font-size: 1.8rem;
@@ -88,22 +91,23 @@
         }
 
         ul li strong {
-            color: #1b5e20;
+            color: #004d40;
         }
 
         ul li a {
-            color: #388e3c;
+            color: #00796b;
             text-decoration: none;
             font-weight: bold;
         }
 
         ul li a:hover {
             text-decoration: underline;
+            color: #004d40;
         }
 
         /* Footer */
         footer {
-            background-color: #2e7d32;
+            background: linear-gradient(90deg, #004d40, #00695c);
             color: white;
             text-align: center;
             padding: 15px 0;
@@ -112,12 +116,24 @@
         }
 
         footer a {
-            color: #c8e6c9;
+            color: #a5d6a7;
             text-decoration: none;
         }
 
         footer a:hover {
             color: #ffffff;
+        }
+
+        /* Keyframes for animations */
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         /* Responsive */
@@ -167,9 +183,9 @@
                 <li><a href="https://fabriciobernardovillanueva.github.io/githubpagetest/" target="_blank">Fabricio Bernardo Villanueva Valdivia</a></li>
                 <li><a href="https://jonathanboristunquipaticuna.github.io/JonathanBorisTunquipaTicu-a/" target="_blank">Jonathan Boris Tunquipa Ticuña</a></li>
                 <li><a href="https://yadhirayurikhocoyuritirado.github.io/yadhirayurikhocoyuri/" target="_blank">Yadhira Yurikho Coyuri Tirado</a></li>
-                 <li><a href="https://emerickcarlosteranbedregal.github.io/EmerickCarlosTeranBedregal/" target="_blank">Emerick Carlos Teran Bedregal</a></li>
-                 <li><a href="https://joaquinadrianolopezmolina.github.io/JoaquinAdrianoLopezMolina/" target="_blank">Joaquin Adriano Lopez Molina</a></li>
-                  <li><a href="https://rodrigorembrantsalasapaza.github.io/RodrigoRembrantSalasApaza/" target="_blank">Rodrigo Rembrant Salas Apaza</a></li>
+                <li><a href="https://emerickcarlosteranbedregal.github.io/EmerickCarlosTeranBedregal/" target="_blank">Emerick Carlos Teran Bedregal</a></li>
+                <li><a href="https://joaquinadrianolopezmolina.github.io/JoaquinAdrianoLopezMolina/" target="_blank">Joaquin Adriano Lopez Molina</a></li>
+                <li><a href="https://rodrigorembrantsalasapaza.github.io/RodrigoRembrantSalasApaza/" target="_blank">Rodrigo Rembrant Salas Apaza</a></li>
             </ul>
         </section>
 
@@ -185,3 +201,4 @@
     </footer>
 </body>
 </html>
+
