--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
                 <li><a href="https://emerickcarlosteranbedregal.github.io/EmerickCarlosTeranBedregal/" target="_blank">Emerick Carlos Teran Bedregal</a></li>
                 <li><a href="https://joaquinadrianolopezmolina.github.io/JoaquinAdrianoLopezMolina/" target="_blank">Joaquin Adriano Lopez Molina</a></li>
                 <li><a href="https://rodrigorembrantsalasapaza.github.io/RodrigoRembrantSalasApaza/" target="_blank">Rodrigo Rembrant Salas Apaza</a></li>
+                <li><a href="https://luisstefanopachecovaldivia.github.io/LuisStefanoPachecoValdivia/" target="_blank">Luis Stefano Pacheco Valdivia</a></li>
             </ul>
         </section>
 
